Distance input modified so when you click done or outside of the keyboard , the keyboard goes away

--- a/app/src/main/res/layout/activity_pace_calculator.xml
+++ b/app/src/main/res/layout/activity_pace_calculator.xml
@@ -29,8 +29,9 @@
             android:layout_height="wrap_content"
             android:hint="@string/hint_text"
             android:clickable="true"
-            android:focusable="false"
-            android:inputType="number"/>
+            android:focusable="true"
+            android:inputType="number"
+            android:imeOptions="actionDone"/>
     </LinearLayout>
 
     <LinearLayout
