--- a/app/src/main/res/layout/activity_pace_calculator.xml
+++ b/app/src/main/res/layout/activity_pace_calculator.xml
@@ -31,7 +31,7 @@
             android:hint="@string/hint_text"
             android:clickable="true"
             android:focusable="true"
-            android:inputType="number"
+            android:inputType="numberDecimal"
             android:imeOptions="actionDone"/>
         <TextView
             android:layout_width="wrap_content"
